test/parser/newline-inside-string-literal.cx
// RUN: %not %cx -parse %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:15: error: newline inside string literal
    var i = "a
    ";
}
